force-app/main/default/objects/Student__c/fields/CourseID1__c.field-meta.xml
<CustomField>
    <fullName>CourseID1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CourseID1</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Student</relationshipLabel>
    <relationshipName>Student</relationshipName>
    <type>Lookup</type>
</CustomField>