force-app/main/default/objects/Student__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email_ID</label>
    <type>Email</type>
</CustomField>