force-app/main/default/objects/Student__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <description>StudentID</description>
    <label>StudentID</label>
    <type>AutoNumber</type>
</CustomField>