force-app/main/default/objects/Student__c/fields/S_Name__c.field-meta.xml
<CustomField>
    <fullName>S_Name__c</fullName>
    <description>Student Name</description>
    <label>S_Name</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>