force-app/main/default/objects/Student__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CourseID1__c</columns>
    <columns>Email__c</columns>
    <columns>MemberShipDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>